@startuml

package "SportFIT.Controllers" {
    class LoginController {
        - Usuario: string
        - Password: string
        - ErrorMessage: string
        + PropertyChanged: PropertyChangedEventHandler
        {method} + OnPropertyChanged(string propertyName): void
        + Login(): bool
    }
}

package "SportFIT.Models" {
    class Actividad {
        + IdActividad: int
        + NombreActividad: string
        + IdInstalacion: int
        + Instalacion: Instalacion
    }

    class Instalacion {
        + IdInstalacion: int
        + NombreInstalacion: string
        + Tipo: string
        + Direccion: string
        + IdPueblo: int
        + Pueblo: Pueblo
        + Reservas: ICollection<Reserva>
        + Actividades: ICollection<Actividad>
    }

    class Permiso {
        + IdPermiso: int
        + NombrePermiso: string
        + Roles: ICollection<Rol>
    }

    class Pueblo {
        + IdPueblo: int
        + NombrePueblo: string
        + CodPostal: string
        + Instalaciones: ICollection<Instalacion>
        + Usuarios: ICollection<Usuario>
    }

    class Reserva {
        + IdReserva: int
        + FechaReserva: DateTime
        + HoraInicio: TimeSpan
        + Duracion: TimeSpan
        + IdUsuario: int
        + Usuario: Usuario
        + IdInstalacion: int
        + Instalacion: Instalacion
    }

    class Rol {
        + IdRol: int
        + NombreRol: string
        + Permisos: ICollection<Permiso>
        + Usuarios: ICollection<Usuario>
    }

    class Usuario {
        + IdUsuario: int
        + NombreUsuario: string
        + ApellidosUsuario: string
        + Email: string
        + Password: string
        + IdRol: int
        + Rol: Rol
        + Pueblos: ICollection<Pueblo>
        + Reservas: ICollection<Reserva>
    }

    class SportFITDbContext {
        + Permisos: DbSet<Permiso>
        + Roles: DbSet<Rol>
        + Usuarios: DbSet<Usuario>
        + Pueblos: DbSet<Pueblo>
        + Instalaciones: DbSet<Instalacion>
        + Reservas: DbSet<Reserva>
        + Actividades: DbSet<Actividad>
        {method} + OnModelCreating(modelBuilder: DbModelBuilder): void
    }
}

package "SportFIT.Views" {
    class LoginView {
        {method} + btnLogin_Click(sender: object, e: RoutedEventArgs): void
    }

    class MainView {
        {method} + MainView()
    }
}

LoginView --> LoginController : uses
MainView --> LoginController : uses

LoginController --> Usuario : controls
LoginController --> Instalacion : uses
LoginController --> Permiso : uses
LoginController --> Rol : uses
LoginController --> Reserva : uses

Instalacion --> Pueblo : has
Pueblo --> Usuario : has
Rol --> Permiso : has
Usuario --> Rol : belongs to
Usuario --> Pueblo : belongs to
Reserva --> Usuario : booked by
Reserva --> Instalacion : booked at

SportFITDbContext --> Permiso : accesses
SportFITDbContext --> Rol : accesses
SportFITDbContext --> Usuario : accesses
SportFITDbContext --> Pueblo : accesses
SportFITDbContext --> Instalacion : accesses
SportFITDbContext --> Reserva : accesses
SportFITDbContext --> Actividad : accesses

@enduml
